-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 2.3.0.0-incubating
-
Component/s: Core
-
Labels:None
This is the line in the master log where the PANIC is reported:
(gdb) bt #0 0x00007f6d35b0e6ab in raise () from /data/logs/52280/new_panic/packcore-core.postgres.457052/lib64/libpthread.so.0 #1 0x00000000008c7d79 in SafeHandlerForSegvBusIll (postgres_signal_arg=11, processName=<optimized out>) at elog.c:4519 #2 <signal handler called> #3 ResourceOwnerEnlargeRelationRefs (owner=0x0) at resowner.c:708 #4 0x00000000008b5659 in RelationIncrementReferenceCount (rel=0x1baf500) at relcache.c:1941 #5 RelationIdGetRelation (relationId=relationId@entry=1259) at relcache.c:1895 #6 0x00000000004ca664 in relation_open (lockmode=lockmode@entry=1, relationId=relationId@entry=1259) at heapam.c:882 #7 heap_open (relationId=relationId@entry=1259, lockmode=lockmode@entry=1) at heapam.c:1285 #8 0x00000000008b0945 in ScanPgRelation (targetRelId=targetRelId@entry=5010, indexOK=indexOK@entry=1 '\001', pg_class_relation=pg_class_relation@entry=0x7ffdf2aed390) at relcache.c:279 #9 0x00000000008b4302 in RelationBuildDesc (targetRelId=5010, insertIt=<optimized out>) at relcache.c:1209 #10 0x00000000008b56c7 in RelationIdGetRelation (relationId=relationId@entry=5010) at relcache.c:1918 #11 0x00000000004ca664 in relation_open (lockmode=<optimized out>, relationId=5010) at heapam.c:882 #12 heap_open (relationId=5010, lockmode=<optimized out>) at heapam.c:1285 #13 0x000000000055d1e6 in caql_basic_fn_all (pcql=0x1d70a58, bLockEntireTable=0 '\000', pCtx=0x7ffdf2aed480, pchn=0xf4b328 <parser_cache+9608>) at caqlanalyze.c:343 #14 caql_switch (pchn=pchn@entry=0xf4b328 <parser_cache+9608>, pCtx=pCtx@entry=0x7ffdf2aed480, pcql=pcql@entry=0x1d70a58) at caqlanalyze.c:229 #15 0x00000000005636db in caql_getcount (pCtx0=pCtx0@entry=0x0, pcql=0x1d70a58) at caqlaccess.c:367 #16 0x00000000009ddc47 in rel_is_partitioned (relid=1882211) at cdbpartition.c:232 #17 rel_part_status (relid=relid@entry=1882211) at cdbpartition.c:484 #18 0x00000000005e7d43 in calculate_virtual_segment_number (candidateOids=<optimized out>) at analyze.c:833 #19 analyzeStmt (stmt=stmt@entry=0x2045dd0, relids=relids@entry=0x0, preferred_seg_num=preferred_seg_num@entry=-1) at analyze.c:486 #20 0x00000000005e89a7 in analyzeStatement (stmt=stmt@entry=0x2045dd0, relids=relids@entry=0x0, preferred_seg_num=preferred_seg_num@entry=-1) at analyze.c:271 #21 0x000000000065c25c in vacuum (vacstmt=vacstmt@entry=0x2045bf0, relids=relids@entry=0x0, preferred_seg_num=preferred_seg_num@entry=-1) at vacuum.c:316 #22 0x00000000007f6012 in ProcessUtility (parsetree=parsetree@entry=0x2045bf0, queryString=0x2045d30 "ANALYZE mis_data_ig_account_details.e_event_1_0_102", params=0x0, isTopLevel=isTopLevel@entry=1 '\001', dest=dest@entry=0xf04ba0 <donothingDR>, completionTag=completionTag@entry=0x7ffdf2aee3f0 "") at utility.c:1471 #23 0x00000000007f1ade in PortalRunUtility (portal=portal@entry=0x1bfb490, utilityStmt=utilityStmt@entry=0x2045bf0, isTopLevel=isTopLevel@entry=1 '\001', dest=dest@entry=0xf04ba0 <donothingDR>, completionTag=completionTag@entry=0x7ffdf2aee3f0 "") at pquery.c:1968 #24 0x00000000007f32be in PortalRunMulti (portal=portal@entry=0x1bfb490, isTopLevel=isTopLevel@entry=1 '\001', dest=0xf04ba0 <donothingDR>, dest@entry=0x1b93f60, altdest=0xf04ba0 <donothingDR>, altdest@entry=0x1b93f60, completionTag=completionTag@entry=0x7ffdf2aee3f0 "") at pquery.c:2078 #25 0x00000000007f5025 in PortalRun (portal=portal@entry=0x1bfb490, count=count@entry=9223372036854775807, isTopLevel=isTopLevel@entry=1 '\001', dest=dest@entry=0x1b93f60, altdest=altdest@entry=0x1b93f60, completionTag=completionTag@entry=0x7ffdf2aee3f0 "") at pquery.c:1595 #26 0x00000000007ee098 in exec_execute_message (max_rows=9223372036854775807, portal_name=0x1b93ad0 "") at postgres.c:2782 #27 PostgresMain (argc=<optimized out>, argv=<optimized out>, argv@entry=0x1a49b40, username=0x1a498f0 "mis_ig") at postgres.c:5170 #28 0x00000000007a0390 in BackendRun (port=0x1a185f0) at postmaster.c:5915 #29 BackendStartup (port=0x1a185f0) at postmaster.c:5484 #30 ServerLoop () at postmaster.c:2163 #31 0x00000000007a3159 in PostmasterMain (argc=<optimized out>, argv=<optimized out>) at postmaster.c:1454 #32 0x00000000004a52b9 in main (argc=9, argv=0x1a20d10) at main.c:226