HAWQ-1417. Fixed crash when ANALYZE after COPY because of invalid resource owner